--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -2,7 +2,8 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  font-family: "Barlow Condensed", sans-serif;
+  font-family: $barlow;
+  font-weight: lighter;
   background-color: $xblack;
   color: #fff;
 }
@@ -12,7 +13,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Bellefair", serif;
+  // font-family: "Bellefair", serif;
 }
 
 .container {
