--- a/scss/pages/_crew.scss
+++ b/scss/pages/_crew.scss
@@ -81,6 +81,7 @@
             width: 75%;
             @include respond(tablet) {
               width: 100%;
+              padding-bottom: 20px;
             }
           }
         }
