--- a/css/main.css
+++ b/css/main.css
@@ -142,14 +142,19 @@ nav .horzNav li:not(.active)::after {
   opacity: 0.6;
 }
 nav .menuBtn {
-  display: none;
+  position: relative;
+  right: 0;
   font-size: 24px;
-  margin-right: 55px;
   z-index: 5;
+  display: none;
 }
 nav .menuBtn a {
   color: #fff;
   cursor: pointer;
+}
+nav .menuBtn.active {
+  position: fixed;
+  top: auto;
 }
 @media only screen and (max-width: 768px) {
   nav .menuBtn {
@@ -158,7 +163,7 @@ nav .menuBtn a {
   }
 }
 nav .vertNav {
-  position: absolute;
+  position: fixed;
   min-height: 100%;
   width: 60%;
   top: 0px;
@@ -169,9 +174,9 @@ nav .vertNav {
   list-style: none;
   padding-top: 80px;
   padding-left: 40px;
-  display: none;
   flex-direction: column;
   gap: 20px;
+  display: none;
 }
 nav .vertNav.active {
   display: flex !important;
