--- a/scss/pages/_technology.scss
+++ b/scss/pages/_technology.scss
@@ -9,15 +9,15 @@
     color: $xblack;
     size: cover;
     repeat: no-repeat;
-    image: url(/imgs/technology/background-desktop.jpg);
+    image: url(../imgs/technology/background-desktop.jpg);
   }
   @include respond(tablet) {
-    background-image: url(/imgs/technology/background-tablet.jpg);
+    background-image: url(../imgs/technology/background-tablet.jpg);
     background-position: bottom;
     justify-content: flex-start;
   }
   @include respond(mobile) {
-    background-image: url(/imgs/technology/background-mobile.jpg);
+    background-image: url(../imgs/technology/background-mobile.jpg);
     background-position: bottom;
   }
   .container {
