--- a/scss/pages/_crew.scss
+++ b/scss/pages/_crew.scss
@@ -9,14 +9,14 @@
     color: $xblack;
     size: cover;
     repeat: no-repeat;
-    image: url(/imgs/crew/background-desktop.jpg);
+    image: url(../imgs/crew/background-desktop.jpg);
   }
   @include respond(tablet) {
-    background-image: url(/imgs/crew/background-tablet.jpg);
+    background-image: url(../imgs/crew/background-tablet.jpg);
     background-position: bottom;
   }
   @include respond(mobile) {
-    background-image: url(/imgs/crew/background-mobile.jpg);
+    background-image: url(../imgs/crew/background-mobile.jpg);
     background-position: bottom;
   }
   .container {
