--- a/scss/pages/_crew.scss
+++ b/scss/pages/_crew.scss
@@ -14,6 +14,7 @@
   @include respond(tablet) {
     background-image: url(../imgs/crew/background-tablet.jpg);
     background-position: bottom;
+    justify-content: normal;
   }
   @include respond(mobile) {
     background-image: url(../imgs/crew/background-mobile.jpg);
